# course-project-grantus

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt  sbom.json  wait-for-vault.sh
.github/: CODEOWNERS
.github/workflows/: ci-p11-dast.yml  ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml
app/: main.py
app/middleware/: auth.py  correlation.py
app/utils/: db.py  http_client.py  logger.py  secrets.py
docs/: REVIEW_CHECKLIST.md
docs/adr/: ADR-001-rfc7807.md  ADR-002-period-validation.md  ADR-003-access-policy.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  RISKS.md  STRIDE.md
policy/: waivers.yml
security/: .gitleaks.toml
security/semgrep/: rules.yml
tests/: conftest.py  test_auth.py  test_errors.py  test_http_client.py  test_success.py
