[tool.poetry]
name = "okrtracker"
version = "0.1.0"
description = "OKR tracker app"
authors = ["Vasilisa"]
packages = [{ include = "app" }]

[tool.ruff]
line-length = 100
lint.select = ["E","F","W","I"]
target-version = "py311"
exclude = ["venv",".venv","build","dist"]

[tool.isort]
profile = "black"
line_length = 100

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.120.4"
uvicorn = "0.30.5"
PyJWT = ">=2.8"
cryptography = ">=41"
h11 = "0.16.0"
filelock = "3.20.0"
PyYAML = "6.0.3"
typing_extensions = "4.14.0"
sniffio = "1.3.1"
psycopg2-binary = "2.9.11"
platformdirs = "4.5.0"
mypy_extensions = "1.1.0"
packaging = "25.0"
pathspec = "0.12.1"
click = "8.3.0"
httpcore = "1.0.9"
Pygments = "2.19.2"
rich = "14.1.0"
idna = "3.10"
certifi = "2025.10.5"
isort = "5.13.2"
identify = "2.6.15"
pluggy = "1.6.0"
iniconfig = "2.1.0"
pydantic = "2.11.7"
pydantic-core = "2.33.2"
requests = "2.32.5"
anyio = "4.9.0"
httpx = "0.27.2"
cfgv = "3.4.0"
limiter = "0.5.0"
Deprecated = "1.2.18"
slowapi = "0.1.9"
hvac = "~2.3.0"
attrs = "~25.4.0"
setuptools = "~80.9.0"
starlette = "0.49.1"
virtualenv = "~20.35.2"
distlib = "~0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
httpx = "0.27.2"
ruff = "0.6.9"
black = "24.8.0"
isort = "5.13.2"
pre-commit = "3.8.0"
pip-audit = "*"
urllib3 = "2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
